@@ -11,11 +11,13 @@ describe 'useradd::nss' do
         context 'with default parameters' do
           it { is_expected.to compile.with_all_deps }
           it { is_expected.to create_class('useradd::nss') }
-          it { is_expected.to create_file('/etc/default/nss').with_content(<<-'EOM'.gsub(/^\s+/,''))
-             NETID_AUTHORITATIVE=FALSE
-             SERVICES_AUTHORITATIVE=FALSE
-             SETENT_BATCH_READ=TRUE
-           EOM
+          it { is_expected.to create_file('/etc/default/nss').with_content( <<-EOM)
+# This file managed by Puppet.
+
+NETID_AUTHORITATIVE=FALSE
+SERVICES_AUTHORITATIVE=FALSE
+SETENT_BATCH_READ=TRUE
+               EOM
           }
         end
 
