@@ -1,3 +1,5 @@
+# This file managed by Puppet.
+
 NETID_AUTHORITATIVE=<%= @netid_authoritative.to_s.upcase %>
 SERVICES_AUTHORITATIVE=<%= @services_authoritative.to_s.upcase %>
 SETENT_BATCH_READ=<%= @setent_batch_read.to_s.upcase %>
