@@ -1,3 +1,4 @@
+# This file managed by Puppet.
 # useradd defaults file
 GROUP=<%= @group %>
 HOME=<%= @home %>
