@@ -1,3 +1,5 @@
+# This file managed by Puppet.
+
 <%
   bool_to_yesno = {
     true => 'yes',
