@@ -1,3 +1,13 @@
+* Wed Jun 14 2017 Brandon Riden <brandon.riden@onyxpoint.com> - 0.2.0
+- Fix bug in libuser.conf where userBranch was referencing groupbranch variable
+- Added/fixed author on all manifests
+- Created Acceptance test
+- Updated spec/spec_helper_acceptance.rb
+- Added Managed by Puppet comment to all file templates
+- updated default nodeset
+- Added notes to login_defs.pp regarding min and max passwd length
+- Cleaned up documentation and made style changes
+
 * Mon Jun 12 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.0
 - Populate /etc/securetty with tty0-tty4, by default.
 
